--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -6,16 +6,14 @@
   /*customizable*/
   height: 300px;
   border-radius: 4px;
-  background-color: rgb(213, 237, 203);
+  background-color: white;
   box-shadow: 0 0px 16px rgba(0, 0, 0, 0.3);
-  justify-content: center;
 }
 .card-pick img {
   /*fixed*/
   width: 100%;
   min-height: 100px;
   flex-grow: 1;
-  width: 100px;
   object-fit: cover;
   /*customizable*/
   object-position: 50% 50%;
@@ -34,36 +32,4 @@
   transition: 0.2s ease-out;
   transform: translateY(-8px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-}
-.card-product {
-  overflow: hidden;
-  height: 120px;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-}
-
-.card-product img {
-  height: 100%;
-  width: 120px;
-  object-fit: cover;
-}
-
-.card-product h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-}
-
-.card-product p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
-}
-
-.card-product .card-product-infos {
-  padding: 16px;
 }
