--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,16 +1,25 @@
+<div class="page-frame-content">
+    <div class="page-frame-header">
 <h1><%= @list.name %></h1>
 <%= link_to 'Back to lists', lists_path, class: "btn btn_primary" %>
 <%= link_to 'Add a movie', new_list_bookmark_path(@list), class: 'btn btn_primary' %>
-
+<%#= link_to 'Back to home', pages_home_path(@), class: 'btn btn_primary' %>
+    </div>
+    <div class="page-frame-body">
+    </div>
 
 <ul>
 <% @list.bookmarks.each do |bookmark|%>
-  <div class="card-pick">
+  <div class="card-hello">
     <%= image_tag "#{bookmark.movie.poster_url}" %>
-    <div class="card-pick-info">
+    <div class="card-hello-info">
       <h2> <%= bookmark.movie.title %></h2>
       <p> <%= bookmark.movie.rating%></p>
     </div>
   </div>
 <% end %>
 </ul>
+
+    <div class="page-frame-footer">
+    </div>
+  </div>
