--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
     <h1>Movies lists</h1>
   </div>
 </div>
+<%= link_to "Make a new list", new_list_path %>
 <div class="container my-5">
   <div class="cards">
     <% @lists.each do |list| %>
