--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Lists</h1>
 <%= link_to "Make a new list", new_list_path %>
 <% @lists.each do |list| %>
-  <div class="card-product">
+  <div class="card-pick">
 
-  <div class="card-product-infos">
+  <div class="card-pick-infos">
    <%= link_to list.name, list_path(list), class: 'text-dark text-decoration-none' %>
   </div>
 </div>
