--- a/app/assets/stylesheets/components/_banners.scss
+++ b/app/assets/stylesheets/components/_banners.scss
@@ -2,12 +2,12 @@
   background-size: cover;
   background-position: center;
   padding: 100px 0;
-  background-color: bisque;
+  background-color: #537188
 }
 
 .banner h1 {
   margin: 0;
-  color: rgb(173, 129, 129);
+  color: #EEEEEE;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
