--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,10 +1,11 @@
 .card-product {
   overflow: hidden;
   height: 120px;
-  background: white;
+  background: rgb(236, 244, 218);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  max-width: 60%;
 }
 
 .card-product img {
