--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,8 @@
 <div class="page-frame-content">
     <div class="page-frame-header">
 <h1><%= @list.name %></h1>
-<%= link_to 'Back to lists', lists_path, class: "btn btn_primary" %>
+<%= link_to 'Back to home', root_path, class: "btn btn_success" %>
 <%= link_to 'Add a movie', new_list_bookmark_path(@list), class: 'btn btn_primary' %>
-<%#= link_to 'Back to home', pages_home_path(@), class: 'btn btn_primary' %>
     </div>
     <div class="page-frame-body">
     </div>
