--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 </div>
   <div class="container">
   </div>
-<%= link_to "Make a new list", new_list_path %>
+<%= link_to "Make a new list", new_list_path, class: 'btn btn_primary'  %>
 
 <% @lists.each do |list| %>
   <div class="container my-5">
